@use instead of @import. Modules using * rather than scoping.

--- a/docs/_includes/snippets/customized.html
+++ b/docs/_includes/snippets/customized.html
@@ -1,5 +1,5 @@
 // Import a Google Font
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
+@use url('https://fonts.googleapis.com/css?family=Nunito:400,700');
 
 // Set your brand colors
 $purple: #8A4D76;
@@ -22,4 +22,4 @@ $input-border-color: transparent;
 $input-shadow: none;
 
 // Import the rest of Bulma
-@import "../path/to/bulma";
+@use "../path/to/bulma";
