--- a/docs/_includes/steps/add-custom-styles.html
+++ b/docs/_includes/steps/add-custom-styles.html
@@ -2,7 +2,7 @@
 @charset "utf-8";
 
 // Import a Google Font
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
+@use url('https://fonts.googleapis.com/css?family=Nunito:400,700');
 
 // Set your brand colors
 $purple: #8A4D76;
@@ -27,15 +27,15 @@ $input-border-color: transparent;
 $input-shadow: none;
 
 // Import only what you need from Bulma
-@import "../node_modules/bulma/sass/utilities/_all.sass";
-@import "../node_modules/bulma/sass/base/_all.sass";
-@import "../node_modules/bulma/sass/elements/button.sass";
-@import "../node_modules/bulma/sass/elements/container.sass";
-@import "../node_modules/bulma/sass/elements/title.sass";
-@import "../node_modules/bulma/sass/form/_all.sass";
-@import "../node_modules/bulma/sass/components/navbar.sass";
-@import "../node_modules/bulma/sass/layout/hero.sass";
-@import "../node_modules/bulma/sass/layout/section.sass";
+@use "../node_modules/bulma/sass/utilities/_all.sass";
+@use "../node_modules/bulma/sass/base/_all.sass";
+@use "../node_modules/bulma/sass/elements/button.sass";
+@use "../node_modules/bulma/sass/elements/container.sass";
+@use "../node_modules/bulma/sass/elements/title.sass";
+@use "../node_modules/bulma/sass/form/_all.sass";
+@use "../node_modules/bulma/sass/components/navbar.sass";
+@use "../node_modules/bulma/sass/layout/hero.sass";
+@use "../node_modules/bulma/sass/layout/section.sass";
 {% endcapture %}
 
 {% capture step_6 %}
