--- a/docs/_includes/steps/create-sass-file.html
+++ b/docs/_includes/steps/create-sass-file.html
@@ -1,6 +1,6 @@
 {% capture scss_bulma %}
 @charset "utf-8";
-@import "{{ include.path }}";
+@use "{{ include.path }}";
 {% endcapture %}
 
 {% capture step_3 %}
