--- a/docs/bulma-docs.scss
+++ b/docs/bulma-docs.scss
@@ -40,8 +40,8 @@ $radius: 0.375em;
 $bd-edge-width: 11.25rem;
 $bd-edge-offset: 2rem;
 
-@import "../sass/utilities/initial-variables";
-@import "../sass/utilities/functions";
+@use "../sass/utilities/initial-variables";
+@use "../sass/utilities/functions";
 
 $custom-colors: (
   "expo": (
@@ -118,11 +118,11 @@ $custom-colors: (
   ),
 );
 
-@import "../sass/utilities/derived-variables";
+@use "../sass/utilities/derived-variables";
 
 $navbar-breakpoint: $tablet;
 
-@import "../bulma";
+@use "../bulma";
 
 %center {
   align-items: center;
@@ -193,62 +193,62 @@ $navbar-breakpoint: $tablet;
   }
 }
 
-@import "./_sass/base/css-vars";
-@import "./_sass/base/custom";
-@import "./_sass/base/helpers";
+@use "./_sass/base/css-vars";
+@use "./_sass/base/custom";
+@use "./_sass/base/helpers";
 
-@import "./_sass/components/anchors";
-@import "./_sass/components/options";
-@import "./_sass/components/banner";
-@import "./_sass/components/call";
-@import "./_sass/components/carbon";
-@import "./_sass/components/categories";
-@import "./_sass/components/code";
-@import "./_sass/components/content";
-@import "./_sass/components/hero";
-@import "./_sass/components/highlight";
-@import "./_sass/components/klmn";
-@import "./_sass/components/navbar";
-@import "./_sass/components/notification";
-@import "./_sass/components/pagination";
-@import "./_sass/components/features";
-@import "./_sass/components/links";
-@import "./_sass/components/screenshots";
-@import "./_sass/components/drawing";
-@import "./_sass/components/variables";
-@import "./_sass/components/book";
-@import "./_sass/components/native";
-@import "./_sass/components/fortyfour";
-@import "./_sass/components/spacing-table";
-@import "./_sass/components/survey";
-@import "./_sass/components/color";
+@use "./_sass/components/anchors";
+@use "./_sass/components/options";
+@use "./_sass/components/banner";
+@use "./_sass/components/call";
+@use "./_sass/components/carbon";
+@use "./_sass/components/categories";
+@use "./_sass/components/code";
+@use "./_sass/components/content";
+@use "./_sass/components/hero";
+@use "./_sass/components/highlight";
+@use "./_sass/components/klmn";
+@use "./_sass/components/navbar";
+@use "./_sass/components/notification";
+@use "./_sass/components/pagination";
+@use "./_sass/components/features";
+@use "./_sass/components/links";
+@use "./_sass/components/screenshots";
+@use "./_sass/components/drawing";
+@use "./_sass/components/variables";
+@use "./_sass/components/book";
+@use "./_sass/components/native";
+@use "./_sass/components/fortyfour";
+@use "./_sass/components/spacing-table";
+@use "./_sass/components/survey";
+@use "./_sass/components/color";
 
-@import "./_sass/pages/index";
-@import "./_sass/pages/docs";
-@import "./_sass/pages/videos";
-@import "./_sass/pages/love";
-@import "./_sass/pages/expo";
-@import "./_sass/pages/backers";
-@import "./_sass/pages/blog";
-@import "./_sass/pages/single";
-@import "./_sass/pages/extensions";
-@import "./_sass/pages/made-with-bulma";
-@import "./_sass/pages/bootstrap";
+@use "./_sass/pages/index";
+@use "./_sass/pages/docs";
+@use "./_sass/pages/videos";
+@use "./_sass/pages/love";
+@use "./_sass/pages/expo";
+@use "./_sass/pages/backers";
+@use "./_sass/pages/blog";
+@use "./_sass/pages/single";
+@use "./_sass/pages/extensions";
+@use "./_sass/pages/made-with-bulma";
+@use "./_sass/pages/bootstrap";
 
-@import "./_sass/index/hello";
-@import "./_sass/index/focus";
-@import "./_sass/index/focus-animations";
-@import "./_sass/index/best";
-@import "./_sass/index/sponsors";
-@import "./_sass/index/heading";
-@import "./_sass/index/columns";
-@import "./_sass/index/custom";
+@use "./_sass/index/hello";
+@use "./_sass/index/focus";
+@use "./_sass/index/focus-animations";
+@use "./_sass/index/best";
+@use "./_sass/index/sponsors";
+@use "./_sass/index/heading";
+@use "./_sass/index/columns";
+@use "./_sass/index/custom";
 
-@import "./_sass/global/support";
-@import "./_sass/global/newsletter";
-@import "./_sass/global/cc";
+@use "./_sass/global/support";
+@use "./_sass/global/newsletter";
+@use "./_sass/global/cc";
 
-@import "./_sass/examples/mixins";
+@use "./_sass/examples/mixins";
 
 .my-element {
   background: red;
