--- a/sass/base/_all.sass
+++ b/sass/base/_all.sass
@@ -1,6 +1,5 @@
-/* Bulma Base */
 @charset "utf-8"
 
-@import "minireset"
-@import "generic"
-@import "animations"
+@use "minireset"
+@use "generic"
+@use "animations"
