--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -1,4 +1,6 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
 
 $body-background-color: $scheme-main !default
 $body-size: 16px !default
