--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -1,4 +1,7 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
+@use "../utilities/extends" as *
 
 $breadcrumb-item-color: $link !default
 $breadcrumb-item-hover-color: $link-hover !default
