--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -1,4 +1,6 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
 
 $dropdown-menu-min-width: 12rem !default
 
