--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -1,4 +1,8 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
+@use "../utilities/extends" as *
+
 
 $modal-z: 40 !default
 
