--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -1,5 +1,8 @@
-@import "../utilities/controls"
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/controls" as *
+@use "../utilities/mixins" as *
+@use "../utilities/extends" as *
 
 $pagination-color: $text-strong !default
 $pagination-border-color: $border !default
