--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -1,4 +1,6 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
 
 $panel-margin: $block-spacing !default
 $panel-item-border: 1px solid $border-light !default
