--- a/sass/elements/image.sass
+++ b/sass/elements/image.sass
@@ -1,4 +1,6 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/mixins"
+@use "../utilities/extends" as *
 
 $dimensions: 16 24 32 48 64 96 128 !default
 
