--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -1,4 +1,7 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
+@use "../utilities/extends" as *
 
 $table-color: $text-strong !default
 $table-background-color: $scheme-main !default
