--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -1,4 +1,7 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins"
+@use "../utilities/extends" as *
 
 $title-color: $text-strong !default
 $title-family: false !default
