--- a/sass/form/file.sass
+++ b/sass/form/file.sass
@@ -1,3 +1,9 @@
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "shared" as *
+@use "../utilities/mixins" as *
+@use "../utilities/extends" as *
+
 $file-border-color: $border !default
 $file-radius: $radius !default
 
