--- a/sass/form/input-textarea.sass
+++ b/sass/form/input-textarea.sass
@@ -1,3 +1,8 @@
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/controls" as *
+@use "shared" as *
+
 $textarea-padding: $control-padding-horizontal !default
 $textarea-max-height: 40em !default
 $textarea-min-height: 8em !default
