--- a/sass/form/select.sass
+++ b/sass/form/select.sass
@@ -1,3 +1,10 @@
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "shared" as *
+@use "../utilities/mixins" as *
+@use "../utilities/controls" as *
+@use "../utilities/extends" as *
+
 $select-colors: $form-colors !default
 
 .select
