--- a/sass/helpers/color.sass
+++ b/sass/helpers/color.sass
@@ -1,4 +1,5 @@
-@import "../utilities/derived-variables"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
 
 @each $name, $pair in $colors
   $color: nth($pair, 1)
