--- a/sass/helpers/other.sass
+++ b/sass/helpers/other.sass
@@ -1,4 +1,5 @@
-@import "../utilities/mixins"
+@use "../utilities/mixins"
+@use "../utilities/extends" as *
 
 .is-radiusless
   border-radius: 0 !important
