--- a/sass/layout/footer.sass
+++ b/sass/layout/footer.sass
@@ -1,4 +1,4 @@
-@import "../utilities/derived-variables"
+@use "../utilities/derived-variables" as *
 
 $footer-background-color: $scheme-main-bis !default
 $footer-color: false !default
