--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -1,4 +1,6 @@
-@import "../utilities/mixins"
+
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
 
 $hero-body-padding: 3rem 1.5rem !default
 $hero-body-padding-tablet: 3rem 3rem !default
@@ -108,7 +110,7 @@ $hero-colors: $colors !default
 // Components
 
 .hero-video
-  @extend %overlay
+  @extend %overlay !optional
   overflow: hidden
   video
     left: 50%
