--- a/sass/layout/section.sass
+++ b/sass/layout/section.sass
@@ -1,4 +1,4 @@
-@import "../utilities/mixins"
+@use "../utilities/mixins" as *
 
 $section-padding: 3rem 1.5rem !default
 $section-padding-desktop: 3rem 3rem !default
