--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -1,5 +1,5 @@
-@import "initial-variables"
-@import "functions"
+@use "initial-variables" as *
+@use "functions" as *
 
 $primary: $turquoise !default
 
