--- a/test/ruby-sass/sass/customize.scss
+++ b/test/ruby-sass/sass/customize.scss
@@ -26,12 +26,12 @@ $input-border-color: transparent;
 $input-shadow: none;
 
 // Import only what you need from Bulma
-@import "../../../sass/utilities/_all.sass";
-@import "../../../sass/base/_all.sass";
-@import "../../../sass/elements/button.sass";
-@import "../../../sass/elements/container.sass";
-@import "../../../sass/elements/title.sass";
-@import "../../../sass/form/_all.sass";
-@import "../../../sass/components/navbar.sass";
-@import "../../../sass/layout/hero.sass";
-@import "../../../sass/layout/section.sass";
+@use "../../../sass/utilities/_all_utilities.sass";
+@use "../../../sass/base/_all.sass";
+@use "../../../sass/elements/button.sass";
+@use "../../../sass/elements/container.sass";
+@use "../../../sass/elements/title.sass";
+@use "../../../sass/form/_all_form.sass";
+@use "../../../sass/components/navbar.sass";
+@use "../../../sass/layout/hero.sass";
+@use "../../../sass/layout/section.sass";
