--- a/test/ruby-sass/sass/only-base.sass
+++ b/test/ruby-sass/sass/only-base.sass
@@ -1,5 +1,5 @@
 @charset "utf-8"
-@import "../../../sass/utilities/_all"
-@import "../../../sass/base/_all"
+@use "../../../sass/utilities/_all_utilities"
+@use "../../../sass/base/_all"
 
 
