--- a/bulma.sass
+++ b/bulma.sass
@@ -1,10 +1,10 @@
 @charset "utf-8"
 /*! bulma.io v0.9.3 | MIT License | github.com/jgthms/bulma */
-@import "sass/utilities/_all"
-@import "sass/base/_all"
-@import "sass/elements/_all"
-@import "sass/form/_all"
-@import "sass/components/_all"
-@import "sass/grid/_all"
-@import "sass/helpers/_all"
-@import "sass/layout/_all"
+@use "sass/utilities/_all_utilities"
+@use "sass/base/_all"
+@use "sass/elements/_all_elements"
+@use "sass/form/_all_form"
+@use "sass/components/_all_components"
+@use "sass/grid/_all_grid"
+@use "sass/helpers/_all_helpers"
+@use "sass/layout/_all_layout"
