--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -1,4 +1,6 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
 
 $card-color: $text !default
 $card-background-color: $scheme-main !default
