--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -1,4 +1,7 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
+@use "../utilities/extends" as *
 
 $level-item-spacing: ($block-spacing * 0.5) !default
 
