--- a/sass/components/media.sass
+++ b/sass/components/media.sass
@@ -1,4 +1,6 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
 
 $media-border-color: bulmaRgba($border, 0.5) !default
 $media-border-size: 1px !default
