--- a/sass/components/menu.sass
+++ b/sass/components/menu.sass
@@ -1,4 +1,6 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
 
 $menu-item-color: $text !default
 $menu-item-radius: $radius-small !default
