--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -1,4 +1,7 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
+@use "../utilities/extends" as *
 
 $message-background-color: $background !default
 $message-radius: $radius !default
