--- a/sass/elements/container.sass
+++ b/sass/elements/container.sass
@@ -1,4 +1,6 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
 
 $container-offset: (2 * $gap) !default
 $container-max-width: $fullhd !default
