--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -1,4 +1,7 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
+@use "../utilities/extends" as *
 
 $content-heading-color: $text-strong !default
 $content-heading-weight: $weight-semibold !default
