--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -1,4 +1,7 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
+@use "../utilities/extends" as *
 
 $notification-background-color: $background !default
 $notification-code-background-color: $scheme-main !default
