--- a/sass/elements/other_elements.sass
+++ b/sass/elements/other_elements.sass
@@ -1,4 +1,7 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins"
+@use "../utilities/extends" as *
 
 .block
   @extend %block
