--- a/sass/elements/progress.sass
+++ b/sass/elements/progress.sass
@@ -1,4 +1,7 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins"
+@use "../utilities/extends" as *
 
 $progress-bar-background-color: $border-light !default
 $progress-value-background-color: $text !default
