--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -1,4 +1,6 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
 
 $tag-background-color: $background !default
 $tag-color: $text !default
