--- a/sass/form/checkbox-radio.sass
+++ b/sass/form/checkbox-radio.sass
@@ -1,3 +1,8 @@
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "shared" as *
+@use "../utilities/mixins" as *
+
 %checkbox-radio
   cursor: pointer
   display: inline-block
