--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -1,3 +1,9 @@
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "shared" as *
+@use "../utilities/mixins" as *
+@use "../utilities/extends" as *
+
 $label-color: $text-strong !default
 $label-weight: $weight-bold !default
 
