--- a/sass/grid/tiles.sass
+++ b/sass/grid/tiles.sass
@@ -1,4 +1,5 @@
-@import "../utilities/mixins"
+@use "../utilities/mixins" as *
+@use "sass:math"
 
 $tile-spacing: 0.75rem !default
 
@@ -33,4 +34,4 @@ $tile-spacing: 0.75rem !default
     @for $i from 1 through 12
       &.is-#{$i}
         flex: none
-        width: (divide($i, 12)) * 100%
+        width: (math.div($i, 12)) * 100%
