--- a/sass/helpers/typography.sass
+++ b/sass/helpers/typography.sass
@@ -1,4 +1,6 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables" as *
+@use "../utilities/derived-variables" as *
+@use "../utilities/mixins" as *
 
 =typography-size($target:'')
   @each $size in $sizes
@@ -72,7 +74,7 @@ $alignments: ('centered': 'center', 'justified': 'justify', 'left': 'left', 'rig
 
 .is-italic
   font-style: italic !important
-  
+
 .is-underlined
   text-decoration: underline !important
 
