--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -1,4 +1,5 @@
-@import "derived-variables"
+@use "initial-variables" as *
+@use "derived-variables" as *
 
 $control-radius: $radius !default
 $control-radius-small: $radius-small !default
