--- a/test/ruby-sass/sass/override.scss
+++ b/test/ruby-sass/sass/override.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 // Import the variables
-@import "../../../sass/utilities/initial-variables.sass";
+@use "../../../sass/utilities/initial-variables.sass";
 
 $blue: #00f;
 
@@ -38,4 +38,4 @@ $spacing-vertical: null;
 $spacing-values: ("small": 10px, "medium": 30px, "large": 60px);
 
 // Import the rest of Bulma
-@import "../../../bulma";
+@use "../../../bulma";
