Fix docs categories scroll

--- a/docs/_sass/components/categories.scss
+++ b/docs/_sass/components/categories.scss
@@ -30,8 +30,11 @@
 }
 
 .bd-categories {
+  @include overflow-touch;
   --height: 1.25;
 
+  max-height: 100vh;
+  overflow-y: auto;
   padding: var(--docs-side-padding);
   position: sticky;
   top: 0;
