--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10060,9 +10060,11 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2);
 }
 
-.pagination-previous[disabled],
+.pagination-previous[disabled], .pagination-previous.is-disabled,
 .pagination-next[disabled],
-.pagination-link[disabled] {
+.pagination-next.is-disabled,
+.pagination-link[disabled],
+.pagination-link.is-disabled {
   background-color: #dbdbdb;
   border-color: #dbdbdb;
   box-shadow: none;
@@ -17598,7 +17600,10 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 }
 
 .bd-categories {
+  -webkit-overflow-scrolling: touch;
   --height: 1.25;
+  max-height: 100vh;
+  overflow-y: auto;
   padding: var(--docs-side-padding);
   position: -webkit-sticky;
   position: sticky;
