--- a/docs/bulma-docs.scss
+++ b/docs/bulma-docs.scss
@@ -234,6 +234,7 @@ $navbar-breakpoint: $tablet;
 @import "./_sass/pages/extensions";
 @import "./_sass/pages/made-with-bulma";
 @import "./_sass/pages/bootstrap";
+@import "./_sass/pages/brand";
 
 @import "./_sass/index/hello";
 @import "./_sass/index/focus";
