--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -213,7 +213,7 @@ fieldset[disabled] .bulma-control-extend {
 .image.is-3by5 .has-ratio, .image.is-9by16 img,
 .image.is-9by16 .has-ratio, .image.is-1by2 img,
 .image.is-1by2 .has-ratio, .image.is-1by3 img,
-.image.is-1by3 .has-ratio, .modal, .modal-background, .is-overlay, .hero-video, .bd-docs-overlay {
+.image.is-1by3 .has-ratio, .modal, .modal-background, .is-overlay, .hero-video, .bd-docs-overlay, .bd-logos-download {
   bottom: 0;
   left: 0;
   position: absolute;
@@ -16883,7 +16883,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   padding: 3rem 1.5rem 6rem;
 }
 
-.bd-option-or p, .bd-snippet-preview.bd-is-mwb, .bd-book-cover, .bd-fortyfour-image, .bd-fortyfour-cta, .bd-side-sponsor, .bd-backers-platform, .bd-backers-platform .bd-backers-platform-logo, .bd-backers-heading, .bd-single-carbon, .bd-single-image, .bd-snippet-mwb, .bd-partner-sponsor, .bd-columns-tool, .bd-footer-sponsor, .bd-footer-donation-action, .bd-footer-star-figure {
+.bd-option-or p, .bd-snippet-preview.bd-is-mwb, .bd-book-cover, .bd-fortyfour-image, .bd-fortyfour-cta, .bd-side-sponsor, .bd-backers-platform, .bd-backers-platform .bd-backers-platform-logo, .bd-backers-heading, .bd-single-carbon, .bd-single-image, .bd-snippet-mwb, .bd-logos-download, .bd-partner-sponsor, .bd-columns-tool, .bd-footer-sponsor, .bd-footer-donation-action, .bd-footer-star-figure {
   align-items: center;
   display: flex;
   justify-content: center;
@@ -20825,6 +20825,111 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 @media screen and (min-width: 1216px) {
   .bd-bootstrap-table {
     font-size: 1.25rem;
+  }
+}
+
+.bd-brand {
+  padding: 3rem;
+}
+
+.bd-logos {
+  --size: 15rem;
+}
+
+.bd-logos > * {
+  align-items: center;
+  border-radius: 2em;
+  display: flex;
+}
+
+.bd-logos-label {
+  margin-bottom: 0 !important;
+}
+
+.bd-logos-color, .bd-logos-item {
+  grid-column: span 2;
+  justify-content: center;
+  height: var(--size);
+  width: var(--size);
+}
+
+.bd-logos-codes {
+  align-items: stretch !important;
+  flex-direction: column;
+  flex-grow: 1;
+  grid-column: span 4;
+}
+
+.bd-logos-code {
+  align-items: center;
+  display: flex;
+  flex-grow: 1;
+  grid-column: span 2;
+}
+
+.bd-logos-code p:first-child {
+  color: #7a7a7a;
+}
+
+.bd-logos-code p:nth-child(2) {
+  flex-grow: 1;
+  margin-right: 1em;
+  text-align: right;
+}
+
+.bd-logos-item {
+  background-size: cover;
+  position: relative;
+}
+
+.bd-logos-item.is-transparent {
+  background-color: #ededed;
+  background-image: repeating-linear-gradient(45deg, transparent, transparent 10px, rgba(255, 255, 255, 0.4) 0, rgba(255, 255, 255, 0.4) 20px), repeating-linear-gradient(-45deg, transparent, transparent 10px, rgba(255, 255, 255, 0.4) 0, rgba(255, 255, 255, 0.4) 20px);
+  grid-column: span 2;
+}
+
+.bd-logos-item:hover .bd-logos-download {
+  opacity: 1;
+}
+
+.bd-logos-download {
+  background-color: rgba(10, 10, 10, 0.8);
+  border-radius: 2em;
+  opacity: 0;
+  transition-duration: 172ms;
+  transition-property: opacity;
+}
+
+.bd-logos-download .title {
+  color: #fff !important;
+}
+
+@media screen and (max-width: 1023px) {
+  .bd-logos > * {
+    justify-content: center;
+    margin-bottom: 1.5rem !important;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .bd-logos-label {
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .bd-logos {
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(7, calc(var(--size) / 2));
+    grid-template-rows: repeat(4, var(--size));
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 936px;
+  }
+  .bd-logos > * {
+    align-items: center;
+    border-radius: 2em;
+    display: flex;
   }
 }
 
