--- a/docs/_sass/components/navbar.scss
+++ b/docs/_sass/components/navbar.scss
@@ -92,6 +92,11 @@
     --color-dark: var(--rss-dark);
   }
 
+  &.bd-navbar-item-brand {
+    --color-light: var(--primary-light);
+    --color-dark: var(--primary-dark);
+  }
+
   &.bd-navbar-item-extensions {
     --color-light: var(--extensions-light);
     --color-dark: var(--extensions-dark);
