--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -18521,6 +18521,11 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   --color-dark: var(--rss-dark);
 }
 
+.bd-navbar-item.bd-navbar-item-brand {
+  --color-light: var(--primary-light);
+  --color-dark: var(--primary-dark);
+}
+
 .bd-navbar-item.bd-navbar-item-extensions {
   --color-light: var(--extensions-light);
   --color-dark: var(--extensions-dark);
