add small caps helper

--- a/sass/helpers/typography.sass
+++ b/sass/helpers/typography.sass
@@ -76,6 +76,9 @@ $alignments: ('centered': 'center', 'justified': 'justify', 'left': 'left', 'rig
 .is-underlined
   text-decoration: underline !important
 
+.is-small-caps
+  font-variant: small-caps !important
+
 .has-text-weight-light
   font-weight: $weight-light !important
 .has-text-weight-normal
