--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -95,7 +95,7 @@ fieldset[disabled] .bulma-control-extend {
 
 .box:not(:last-child), .content:not(:last-child), .notification:not(:last-child), .progress:not(:last-child), .table:not(:last-child), .table-container:not(:last-child), .title:not(:last-child),
 .subtitle:not(:last-child), .block:not(:last-child), .breadcrumb:not(:last-child), .level:not(:last-child), .message:not(:last-child), .pagination:not(:last-child), .tabs:not(:last-child), .bd-tabs:not(:last-child), .bd-example:not(:last-child), .bd-snippet:not(:last-child), .bd-content .highlight:not(:last-child),
-.bd-content .bd-highlight-full:not(:last-child), .bd-book-cover:not(:last-child), .bd-side-sponsrs:not(:last-child) {
+.bd-content .bd-highlight-full:not(:last-child), .bd-book-cover:not(:last-child), .bd-pills:not(:last-child), .bd-side-sponsrs:not(:last-child) {
   margin-bottom: 1.5rem;
 }
 
@@ -221,7 +221,7 @@ fieldset[disabled] .bulma-control-extend {
   top: 0;
 }
 
-.navbar-burger, .bd-tabs-nav button, .bd-category-toggle, .bd-navbar-search-icon {
+.navbar-burger, .bd-tabs-nav button, .bd-category-toggle, .bd-navbar-search-icon, .bd-pill-button {
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
@@ -16889,7 +16889,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   justify-content: center;
 }
 
-.navbar-burger, .bd-tabs-nav button, .bd-category-toggle, .bd-navbar-search-icon {
+.navbar-burger, .bd-tabs-nav button, .bd-category-toggle, .bd-navbar-search-icon, .bd-pill-button {
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
@@ -19518,6 +19518,49 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   height: 24px;
   margin-right: 8px;
   width: 24px;
+}
+
+.bd-pills {
+  align-items: center;
+  color: #7a7a7a;
+  display: flex;
+  justify-content: center;
+}
+
+.bd-pill-label {
+  padding: 0 0.5em;
+}
+
+.bd-pills-body {
+  background: whitesmoke;
+  align-items: center;
+  background: #fafafa;
+  border-radius: 0.5em;
+  display: flex;
+  padding: 0.25em;
+}
+
+.bd-pill-button {
+  border-radius: 0.25em;
+  color: #4a4a4a;
+  cursor: pointer;
+  font-weight: 500;
+  padding: 0.5em 0.75em;
+  position: relative;
+  transition-duration: 0.5s;
+  transition-property: color, background-color;
+}
+
+.bd-pill-button:hover {
+  background-color: white;
+  color: #363636;
+}
+
+.bd-pill-button.is-active {
+  background-color: white;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 0.125em 0.125em rgba(0, 0, 0, 0.05);
+  color: #363636;
+  z-index: 1;
 }
 
 :root {
