Add responsive button sizes

--- a/docs/_includes/elements/anchor.html
+++ b/docs/_includes/elements/anchor.html
@@ -5,4 +5,9 @@
   <a class="bd-anchor-link" href="#{{ include.name | slugify }}">
     #
   </a>
+  {% if include.tag %}
+    <span class="tag is-success">
+      {{ include.tag }}
+    </span>
+  {% endif %}
 </h3>
